<resources>
    <string name="app_name">CinemaExpert</string>
    <string name="sign_up_underlined"><u>Sign up</u></string>
    <string name="social_media_signup">Social Media Signup</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_caps">LOGIN</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="welcome">Welcome!</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="first_time">First time here?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_caps">SIGN UP</string>
    <string name="sign_in_underlined"><u>Sign in</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="user_name">User name</string>
    <string name="get_started">Get Started</string>
    <string name="intro_sentence">Sit back, relax, and enjoy the magic of \n\n\n\n from wherever you are.</string>
    <string name="chose_all_movies_list">all</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>