<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/baseline_arrow_back_white_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_time_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/inter_bold"
        android:letterSpacing="0.1"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/subtitle_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/sign_in_to_continue"
        android:textColor="#DDC299"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_time_txt" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/grey_rectangle"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="8dp"
        android:fontFamily="@font/inter_bold"
        android:hint="@string/email"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingVertical="10dp"
        android:textSize="16dp"
        android:inputType="text"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:lines="1"
        android:maxEms="10"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_txt"
        app:layout_constraintVertical_bias="0.120000005" />

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/grey_rectangle"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:fontFamily="@font/inter_bold"
        android:hint="@string/password"
        android:paddingLeft="8dp"
        android:paddingRight="46dp"
        android:paddingVertical="10dp"
        android:textSize="16dp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:lines="1"
        android:maxEms="10"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input"
        app:layout_constraintVertical_bias="0.078" />

    <ImageView
        android:id="@+id/pass_eye"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/password_eye"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_password_input"
        app:layout_constraintEnd_toEndOf="@+id/confirm_password_input"
        app:layout_constraintTop_toTopOf="@+id/confirm_password_input" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_sign_up_button"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:background="@drawable/yellow_orange_gradient"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/login_caps"
        android:backgroundTint="@null"
        android:textAppearance="@style/inter_extrabold_style"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_input"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/kanit_regular"
        android:text="@string/forgot_password"
        android:textColor="#E1AA58"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_sign_up_button" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="145dp"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/grey_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass"
        app:layout_constraintVertical_bias="0.03" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="145dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/grey_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kanit_medium"
        android:text="or"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/social_media_signup"
        android:textColor="#DDC299"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.22000003" />

    <ImageView
        android:id="@+id/yandex_sign"
        android:layout_width="31dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/yandex_logo_icon" />

    <ImageView
        android:id="@+id/google_sign"
        android:layout_width="49dp"
        android:layout_height="49dp"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/yandex_sign"
        app:layout_constraintEnd_toStartOf="@+id/vk_sign"
        app:layout_constraintStart_toEndOf="@+id/yandex_sign"
        app:layout_constraintTop_toTopOf="@+id/yandex_sign"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/google_logo_icon" />

    <ImageView
        android:id="@+id/vk_sign"
        android:layout_width="38dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="@+id/google_sign"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/google_sign"
        app:srcCompat="@drawable/vk_logo_icon" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/inika_regular"
        android:text="@string/dont_have_an_account"
        android:textColor="#D9D9D9"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/inika_regular"
        android:text="@string/sign_up_underlined"
        android:textColor="#DDC299"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>